refactor: Remove 13 unused methods from SystemCore; Fix technical indicator panel display values